--- a/src/styles/_iconmoon.scss
+++ b/src/styles/_iconmoon.scss
@@ -1,19 +1,19 @@
 @font-face {
-  font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?ampt1m");
-  src: url("../fonts/icomoon.eot?ampt1m#iefix") format("embedded-opentype"),
-    url("../fonts/icomoon.ttf?ampt1m") format("truetype"),
-    url("../fonts/icomoon.woff?ampt1m") format("woff"),
-    url("../fonts/icomoon.svg?ampt1m#icomoon") format("svg");
+  font-family: 'icomoon';
+  src: url('../fonts/icomoon.eot?ampt1m');
+  src: url('../fonts/icomoon.eot?ampt1m#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?ampt1m') format('truetype'),
+    url('../fonts/icomoon.woff?ampt1m') format('woff'),
+    url('../fonts/icomoon.svg?ampt1m#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: "icomoon" !important;
+  font-family: 'icomoon' !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -25,133 +25,136 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.icon-close-image:before {
+  content: '\e926';
+  color: #fff;
+}
 .icon-email:before {
-  content: "\e924";
+  content: '\e924';
 }
 .icon-sms:before {
-  content: "\e925";
+  content: '\e925';
 }
 .icon-minus-icon:before {
-  content: "\e922";
+  content: '\e922';
 }
 .icon-plus-icon:before {
-  content: "\e923";
+  content: '\e923';
 }
 .icon-image-download:before {
-  content: "\e90e";
+  content: '\e90e';
 }
 .icon-information:before {
-  content: "\e90f";
+  content: '\e90f';
 }
 .icon-minus:before {
-  content: "\e910";
+  content: '\e910';
 }
 .icon-mobile-app-vsite:before {
-  content: "\e911";
+  content: '\e911';
 }
 .icon-plus:before {
-  content: "\e912";
+  content: '\e912';
 }
 .icon-tick:before {
-  content: "\e913";
+  content: '\e913';
 }
 .icon-video-download:before {
-  content: "\e914";
+  content: '\e914';
 }
 .icon-video-tutorial:before {
-  content: "\e915";
+  content: '\e915';
 }
 .icon-word-file .path1:before {
-  content: "\e916";
+  content: '\e916';
   color: rgb(120, 185, 255);
 }
 .icon-word-file .path2:before {
-  content: "\e917";
+  content: '\e917';
   margin-left: -1em;
   color: rgb(120, 185, 255);
 }
 .icon-word-file .path3:before {
-  content: "\e918";
+  content: '\e918';
   margin-left: -1em;
   color: rgb(250, 250, 250);
 }
 .icon-word-file .path4:before {
-  content: "\e919";
+  content: '\e919';
   margin-left: -1em;
   color: rgb(120, 185, 255);
 }
 .icon-word-file .path5:before {
-  content: "\e91a";
+  content: '\e91a';
   margin-left: -1em;
   color: rgb(120, 185, 255);
 }
 .icon-word-file .path6:before {
-  content: "\e91b";
+  content: '\e91b';
   margin-left: -1em;
   color: rgb(120, 185, 255);
 }
 .icon-word-file .path7:before {
-  content: "\e91c";
+  content: '\e91c';
   margin-left: -1em;
   color: rgb(120, 185, 255);
 }
 .icon-word-file .path8:before {
-  content: "\e91d";
+  content: '\e91d';
   margin-left: -1em;
   color: rgb(120, 185, 255);
 }
 .icon-cancel2:before {
-  content: "\e91e";
+  content: '\e91e';
 }
 .icon-created-by:before {
-  content: "\e91f";
+  content: '\e91f';
 }
 .icon-date-picker:before {
-  content: "\e920";
+  content: '\e920';
 }
 .icon-help:before {
-  content: "\e921";
+  content: '\e921';
 }
 .icon-profile-settings:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon-schedule-appointment:before {
-  content: "\e901";
+  content: '\e901';
 }
 .icon-signout:before {
-  content: "\e902";
+  content: '\e902';
 }
 .icon-sorting:before {
-  content: "\e903";
+  content: '\e903';
 }
 .icon-switch-user:before {
-  content: "\e904";
+  content: '\e904';
 }
 .icon-user-management:before {
-  content: "\e905";
+  content: '\e905';
 }
 .icon-user:before {
-  content: "\e906";
+  content: '\e906';
 }
 .icon-call-configuration:before {
-  content: "\e907";
+  content: '\e907';
 }
 .icon-call-recording:before {
-  content: "\e908";
+  content: '\e908';
 }
 .icon-change-password:before {
-  content: "\e909";
+  content: '\e909';
 }
 .icon-hamburger-menu:before {
-  content: "\e90a";
+  content: '\e90a';
 }
 .icon-job-order-management:before {
-  content: "\e90b";
+  content: '\e90b';
 }
 .icon-lander-management:before {
-  content: "\e90c";
+  content: '\e90c';
 }
 .icon-password:before {
-  content: "\e90d";
+  content: '\e90d';
 }
