--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,6 +1,6 @@
 $white: #ffffff;
 $black: #000000;
-$blue-primary: #007bff;
+$blue-primary: #334aa6;
 $blue-focus: #256ca9;
 $blue-secondary: #3b82bf;
 $fc-border: #888888;
